--- a/source/sass/layout/_root.scss
+++ b/source/sass/layout/_root.scss
@@ -1,5 +1,11 @@
 @import 'header';
 @import 'sections/01_hero';
 @import 'sections/02_about_us';
+@import 'sections/03_services';
+@import 'sections/04_benefits';
+@import 'sections/05_reviews';
+@import 'sections/06_areas';
+@import 'sections/07_all_services';
+@import 'sections/08_banner';
 @import 'footer';
 @import 'responsive';
