--- a/source/sass/base/_base.scss
+++ b/source/sass/base/_base.scss
@@ -126,12 +126,19 @@ div.container{
 	font-size: 50px;
 	font-weight: 700;
 	line-height: 1.5;
+	@media(max-width: 1024px){
+		font-size: 30px;
+	}
 }
 .page_subtitle{
 	margin-bottom: 30px;
 	font-size: 42px;
 	color: $ccorp;
 	line-height: 1.5;
+	@media(max-width: 1024px){
+		margin-bottom: 20px;
+		font-size: 20px;
+	}
 }
 .section_title{
 	margin-bottom: 15px;
@@ -139,6 +146,10 @@ div.container{
 	color: $ccorp;
 	font-weight: 700;
 	line-height: 1.5;
+	@media(max-width: 1024px){
+		margin-bottom: 10px;
+		font-size: 16px;
+	}
 	&.center{
 		text-align: center;
 	}
@@ -149,6 +160,9 @@ div.container{
 	font-weight: 700;
 	color: $cdark;
 	line-height: 1.5;
+	@media(max-width: 1024px){
+		font-size: 20px;
+	}
 	&.center{
 		text-align: center;
 	}
@@ -160,6 +174,10 @@ div.container{
 	margin-bottom: 25px;
 	font-size: 16px;
 	max-width: 970px;
+	@media(max-width: 1024px){
+		margin-bottom: 15px;
+		font-size: 14px;
+	}
 	&.center{
 		text-align: center;
 		margin: 0 auto
@@ -172,6 +190,12 @@ div.container{
 			display: flex;
 			align-items: center;
 			margin-bottom: 15px;
+			@media(max-width: 1024px){
+				display: grid;
+				grid-template-columns: 10px 1fr;
+				grid-gap: 5px;
+				align-items: flex-start;
+			}
 			&:last-child{
 				margin-bottom: 0;
 			}
@@ -183,6 +207,12 @@ div.container{
 				background-color: $ccorp;
 				margin-right: 10px;
 				clip-path: polygon(100% 50%, 0 0, 0 100%);
+				@media(max-width: 1024px){
+					width: 10px;
+					height: 10px;
+					top: 8px;
+					position: relative;
+				}
 			}
 		}
 	}
@@ -218,6 +248,10 @@ div.container{
 		background-color: $ccorp;
 		color: $cwhite;
 		transition: all 0.4s;
+		@media(max-width: 1024px){
+			font-size: 12px;
+			font-weight: 700;
+		}
 		i{
 			margin-right: 10px;
 		}
@@ -248,6 +282,9 @@ div.container{
 		a{
 			padding: 10px 45px;
 			clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+			@media(max-width: 1024px){
+				clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+			}
 			&:hover{
 				clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 			}
@@ -257,8 +294,12 @@ div.container{
 		a{
 			padding: 10px 45px 10px 25px;
 			clip-path: polygon(0% 0%, 100% 0%, 75% 100%, 0% 100%);
+			@media(max-width: 1024px){
+				clip-path: polygon(0% 0%, 100% 0%, 85% 100%, 0% 100%);
+			}
 			&:hover{
 				clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+				padding: 10px 45px;
 			}
 		}
 	}
@@ -267,6 +308,7 @@ div.container{
 			background-color: transparent;
 			color: $cdark;
 			text-transform: none;
+			padding: 0;
 			i{
 				display: flex;
 				align-items: center;
@@ -299,9 +341,14 @@ div.container{
 	display: flex;
 	align-items: center;
 	margin-top: 30px;
+	@media(max-width: 1024px){
+		margin-top: 20px;
+		flex-direction: column;
+	}
 	.theme_button{
-		&:first-child{
-			margin-right: 20px;
+		margin-right: 20px;
+		&:last-child{
+			margin-right: 0;
 		}
 	}
 	&.center{
