--- a/source/sass/base/_fonts.scss
+++ b/source/sass/base/_fonts.scss
@@ -1,4 +1,3 @@
 @include get-font('remixicon', '../fonts/remixicon', 400, normal, woff2);
-@include get-font('roboto', '../fonts/Roboto-Regular', 400, normal, ttf);
-@include get-font('roboto', '../fonts/Roboto-Medium', 500, normal, ttf);
-@include get-font('roboto', '../fonts/Roboto-Bold', 700, normal, ttf);
+@include get-font('helvetica', '../fonts/Helvetica', 400, normal, ttf);
+@include get-font('helvetica', '../fonts/Helvetica-Bold', 700, normal, ttf);
