--- a/source/sass/layout/_footer.scss
+++ b/source/sass/layout/_footer.scss
@@ -11,6 +11,10 @@ footer.site_footer{
             &.footer_columns{
                 display: flex;
                 gap: 100px;
+                @media(max-width: 1024px){
+                    flex-direction: column;
+                    gap: 20px;
+                }
                 .column{
                     flex: 1;
                     .logo{
@@ -48,6 +52,9 @@ footer.site_footer{
             .footer_menu{
                 display: flex;
                 justify-content: center;
+                @media(max-width: 1024px){
+                    display: none;
+                }
                 ul{
                     @extend .no-list;
                     display: flex;
