--- a/source/sass/layout/sections/_02_about_us.scss
+++ b/source/sass/layout/sections/_02_about_us.scss
@@ -1,19 +1,42 @@
 section.about_us{
     margin-bottom: 150px;
+    @media(max-width: 1024px){
+        margin-bottom: 80px;
+    }
     .container{
         .about_wrap{
             display: grid;
             grid-gap: 70px;
             grid-template-columns: 480px 1fr;
+            @media(max-width: 1440px){
+                grid-template-columns: 400px 1fr;
+                grid-gap: 30px;
+            }
+            @media(max-width: 1024px){
+                grid-template-columns: 1fr;
+            }
             .about_left{
                 display: block;
                 width: 100%;
+                @media(max-width: 1024px){
+                    order: 2;
+                }
                 .about_slider{
                     max-width: 100%;
+                    @media(max-width: 1024px){
+                        max-width: calc(100vw - 32px);
+                    }
                     .swiper-slide{
                         figure{
                             padding: 0 0 50px 70px;
                             height: 505px;
+                            @media(max-width: 1440px){
+                                height: 450px;
+                            }
+                            @media(max-width: 1024px){
+                                height: 300px;
+                                padding: 0 0 50px 35px;
+                            }
                             &:before{
                                 @extend .overlay;
                                 top: 50px;
@@ -30,6 +53,9 @@ section.about_us{
                                 align-items: center;
                                 height: 50px;
                                 font-size: 22px;
+                                @media(max-width: 1440px){
+                                    font-size: 20px;
+                                }
                             }
                         }
                     }
@@ -43,6 +69,9 @@ section.about_us{
                         background-color: #EEEEEE;
                         height: 50px;
                         z-index: 3;
+                        @media(max-width: 1024px){
+                            gap: 10px;
+                        }
                         .swiper_arrow {
                             position: relative;
                             top: unset;
