--- a/source/sass/layout/sections/_03_services.scss
+++ b/source/sass/layout/sections/_03_services.scss
@@ -1,21 +1,37 @@
 section.services{
     margin-bottom: 170px;
+    overflow: hidden;
+    @media(max-width: 1024px){
+        margin-bottom: 50px;
+    }
     .section_wrap{
         padding-top: 106px;
+        @media(max-width: 1024px){
+            padding-top: 50px;
+        }
         &:before{
             @extend .overlay;
             height: 380px;
             clip-path:  polygon(15% 0, 100% 0, 100% 100%, 0% 100%);
             background-color: $cmain;
             z-index: 2;
+            @media(max-width: 1024px){
+                height: 160px;
+                left: -16px;
+            }
         }
         &:after{
             @extend .overlay;
             height: 380px;
-            box-shadow: 0 1px 0 100vmax $cmain;
-            clip-path: inset(0 -100vmax 0 0);
-            //left: -1px;
+            // box-shadow: 0 1px 0 100vmax $cmain;
+            // clip-path: inset(0 -100vmax 0 0);
+            left: 300px;
+            background-color: $cmain;
             z-index: 1;
+            @media(max-width: 1024px){
+                height: 160px;
+                //left: -16px;
+            }
         }
     }
     .section_title{
@@ -24,16 +40,28 @@ section.services{
     .subtitle{
         margin-bottom: 60px;
         z-index: 3;
+        @media(max-width: 1024px){
+            margin-bottom: 30px;
+        }
     }
     .services_list{
         display: flex;
         gap: 20px;
         z-index: 3;
+        @media(max-width: 1440px){
+            gap: 10px;
+        }
+        @media(max-width: 1024px){
+            flex-direction: column;
+        }
         .service_item{
             figure{
                 width: 100%;
                 height: 350px;
                 margin-bottom: 36px;
+                @media(max-width: 1440px){
+                    height: 300px;
+                }
                 img{
                     width: 100%;
                     height: 100%;
