--- a/source/sass/layout/sections/_04_benefits.scss
+++ b/source/sass/layout/sections/_04_benefits.scss
@@ -1,10 +1,19 @@
 section.benefits{
     margin-bottom: 170px;
+    @media(max-width: 1024px){
+        margin-bottom: 50px;
+    }
     .section_wrap{
         display: grid;
-        grid-gap: 64px;
-        grid-template-columns: 1.5fr 1fr;
+        grid-gap: 40px;
+        grid-template-columns: 1fr 1fr;
         align-items: end;
+        @media(max-width: 1440px){
+            grid-gap: 20px;
+        }
+        @media(max-width: 1024px){
+            grid-template-columns: 1fr;
+        }
         .section_left{
 
         }
@@ -13,11 +22,20 @@ section.benefits{
                 display: grid;
                 grid-gap: 20px;
                 grid-template-columns: repeat(2, 1fr);
+                @media(max-width: 1024px){
+                    grid-template-columns: 1fr;
+                }
                 .benefit_item{
-                    padding: 32px 28px;
+                    padding: 20px 15px;
                     background-color: $clight;
+                    @media(max-width: 1440px){
+                        padding: 20px 15px;
+                    }
                     &:nth-child(2n){
                         transform: translateY(-35px);
+                        @media(max-width: 1024px){
+                            transform: translateY(0);
+                        }
                     }
                     .benefit_title{
                         display: flex;
