--- a/source/sass/layout/sections/_07_all_services.scss
+++ b/source/sass/layout/sections/_07_all_services.scss
@@ -1,15 +1,28 @@
 section.all_services{
     margin-bottom: 170px;
+    @media(max-width: 1024px){
+        margin-bottom: 50px;
+    }
     .container{
         display: grid;
         grid-gap: 90px;
         grid-template-columns: 1fr 1fr;
+        @media(max-width: 1440px){
+            grid-gap: 30px;
+        }
+        @media(max-width: 1024px){
+            grid-template-columns: 1fr;
+        }
         .section_left{
             .section_list{
                 ul{
                     display: grid;
                     grid-gap: 20px 50px;
                     grid-template-columns: repeat(2, 1fr);
+                    @media(max-width: 1024px){
+                        grid-gap: 10px;
+                        grid-template-columns: 1fr;
+                    }
                     li{
                         margin-bottom: 0;
                         &:before{
@@ -18,6 +31,7 @@ section.all_services{
                         a{
                             display: flex;
                             align-items: center;
+                            grid-column: 1 / span 2;
                             i{
                                 display: flex;
                                 align-items: center;
@@ -33,7 +47,18 @@ section.all_services{
                             span{
                                 color: $cdark;
                                 font-size: 20px;
-                                font-weight: 700;
+                                @media(max-width: 1440px){
+                                    font-size: 16px;
+                                }
+                            }
+                            
+                            &:hover{
+                                i{
+                                    animation-name: pinAnim;
+                                    animation-duration: 1s;
+                                    animation-iteration-count: infinite;
+                                    animation-timing-function: linear;
+                                }
                             }
                         }
                     }
