--- a/source/sass/layout/sections/_07_all_services.scss
+++ b/source/sass/layout/sections/_07_all_services.scss
@@ -73,6 +73,64 @@ section.all_services{
                 .section_text{
 
                 }
+                .wpforms-form{
+                    padding: 18px 36px;
+                    background-color: $cmain;
+                    @media(max-width: 1024px){
+                        padding: 10px 16px;
+                    }
+                }
+                .wpforms-field-container{
+                    display: grid;
+                    grid-gap: 25px 21px;
+                    grid-template-columns: repeat(2, 1fr);
+                    @media(max-width: 1024px){
+                        grid-gap: 15px;
+                        grid-template-columns: 1fr;
+                    }
+                    .wpforms-field{
+                        label{
+                            color: $cwhite;
+                            margin-bottom: 7px;
+                            font-size: 16px;
+                        }
+                        input{
+                            height: 50px;
+                            background-color: #EFEFEF;
+                            border-radius: 3px;
+                            padding-left: 10px;
+                            width: 100%;
+                            max-width: 100%;
+                        }
+                        textarea{
+                            height: 130px;
+                        }
+                        &.column-2{
+                            grid-column: 1/ span 2;
+                            @media(max-width: 1024px){
+                                grid-column: unset;
+                            }
+                        }
+                    }
+                }
+                .wpforms-submit{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 10px 0;
+                    color: $cwhite;
+                    background-color: $ccorp;
+                    clip-path: polygon(10% 0%, 100% 0%, 100% 100%, 0% 100%);
+                    width: 100%;
+                    border: none;
+                    transition: 0.4s;
+                    @media(max-width: 1024px){
+                        clip-path: polygon(5% 0%, 100% 0%, 100% 100%, 0% 100%);
+                    }
+                    &:hover{
+                        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+                    }
+                }
             }
         }
     }
