--- a/source/sass/layout/sections/_03_services.scss
+++ b/source/sass/layout/sections/_03_services.scss
@@ -85,7 +85,7 @@ section.services{
                 }
             }
             .service_desc{
-
+                margin-bottom: 15px;
             }
         }
     }
