--- a/source/sass/layout/sections/_05_reviews.scss
+++ b/source/sass/layout/sections/_05_reviews.scss
@@ -5,6 +5,7 @@ section.reviews{
     margin-bottom: 170px;
     @media(max-width: 1024px){
         grid-gap: 15px;
+        margin-bottom: 270px;
     }
     figure{
         width: 100%;
