--- a/source/sass/layout/_header.scss
+++ b/source/sass/layout/_header.scss
@@ -84,6 +84,8 @@ header.site_header{
                             @media(max-width: 1024px){
                                 padding: 5px 40px;
                                 line-height: 18px;
+                                width: 200px;
+                                font-size: 13px;
                             }
                             i{
                                 font-size: 30px;
